--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -307,7 +307,7 @@
     }
     SetupPage();
     if (LoadRot == '') {
-        if (window.adapter.browserDetails.browser != 'chrome') {
+        if (window.adapter.browserDetails.browser != 'chrome' || navigator.userAgent.indexOf("Edg") > 0) {
              alert("You must use Google Chrome to D Judge");
             window.location = "/";
         }
