--- a/STSEval/management/templates/management/setup_competition.html
+++ b/STSEval/management/templates/management/setup_competition.html
@@ -34,8 +34,8 @@
 	    </div>
     </div>
     <br/>
-    <br/>
     <div>
+        <a href="/media/project-stslivegym-setup.mp4" target="_blank">See Sample Competition Setup Here</a><br/>
         <button href="#" id="btnNext" type="button" class="btn-main btn-wide ui-disabled pt-4 pb-4" style="border-radius: 1rem;" onclick="btnNextClick()">Session<br/>Setup</button><br/>
         <span style="font-size:.8rem;color:red;display:none" id="spanNotActive">Session must be activated to goto overview</span><br/>
         <button href="#" id="btnAdministrate" type="button" class="btn-main btn-wide ui-disabled pt-4 pb-4" style="border-radius: 1rem;" onclick="btnAdministrateClick()">Session Overview</button>
