--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -1110,7 +1110,8 @@
             let tot = (parseFloat(StartValueScore - neutral - TotalDeductions).toFixed(2))
             if (tot < 0)
                 tot = 0
-            document.getElementById('divTotalScore').innerHTML = (parseFloat(tot).toFixed(2).toFixed(2));
+            document.getElementById('divTotalScore').innerHTML = FormatWith0(parseFloat(tot).toFixed(2));
+            //FormatWith0(parseFloat(+StartValueScore + +EScore - +neutral).toFixed(2));
         }
         else if (ScoringType == "JO8910") {
             /*if (countedE > 1 && countedE <= 3)
