--- a/STSEval/app/templates/app/scoreboard.html
+++ b/STSEval/app/templates/app/scoreboard.html
@@ -115,6 +115,10 @@
         });
     }
 
+    function ExportScores() {
+
+    }
+
 
     function SwapEvent(evIn) {
         window.location = "/scoreboard/" + evIn;
