--- a/STSEval/chat/templates/chat/chat.html
+++ b/STSEval/chat/templates/chat/chat.html
@@ -108,7 +108,7 @@
         $(".chat-history").hide();
         ChatNotices[$("#ChatSelect").val()] = 0;
         SetChatNotices();
-        $("#divChat" + $("#ChatSelect").val()).show();
+        $("#divChat" + $("#ChatSelect").val().replace('+','')).show();
         ScrollChatDown();
     }
 
