--- a/STSEval/chat/templates/chat/chat.html
+++ b/STSEval/chat/templates/chat/chat.html
@@ -108,7 +108,7 @@
         $(".chat-history").hide();
         ChatNotices[$("#ChatSelect").val()] = 0;
         SetChatNotices();
-        $("#divChat" + $("#ChatSelect").val().replace('+','')).show();
+        $("#divChat" + $("#ChatSelect").val()).show();
         ScrollChatDown();
     }
 
@@ -164,7 +164,7 @@
                         
                         message.docChanges().forEach(function (m) {
                             if (m.type === "added") {
-                                AddChatMessage(change.doc.id.replace(chatter,'').replaceAll(' ','').replaceAll('-','').replaceAll('+',''),  m.doc.data());
+                                AddChatMessage(change.doc.id.replace(chatter,'').replaceAll(' ','').replaceAll('-','').replaceAll('+','\\+'),  m.doc.data());
                                 //console.log("message: " + m.doc.data().message);
                             }
                         });
