--- a/STSEval/app/templates/app/help/coach.html
+++ b/STSEval/app/templates/app/help/coach.html
@@ -1,6 +1,8 @@
 <div id="divHelpManageTeam" align="center">
 <p align="left">The Coach has access to three features:</p>
-<ul align="left"><li>Start List</li>
-<li>Inquiry (<i class='fa fa-comments'></i>), which sends a text message to the Meet Administrator for things like:</li><ul><li>scratches</li><li>changes to competition order</li><li>inquiries</li><li>etc.</li></ul>
-<li>Scoreboard, which gives you access to completed exercises, including video.</li></ul>
+<ul align="left"><li>Start List</li><ul><li>yellow: gymnast stands at the event. Prepare to begin.</li><li>green: gymnast begins exercise.</li><li>red: gymnast has completed exercise.</li></ul>
+<li>Inquiry (<i class='fas fa-comments'></i>) sends a text message to the Meet Administrator:</li><ul><li>scratches</li><li>changes to competition order</li><li>inquiries</li><li>etc.</li></ul>
+<li>Scoreboard, access to completed exercises including video.</li></ul>
+<p align="left">For falls and dismounts, Coach is notified credit / no credit.</p>
+<p align='left'>There is a fall timer:</p><ul align='left'><li>First 30 seconds black.</li><li>Second 30 seconds red.</li></ul>
 <button href="#" id="btnTeamCancel" type="button" class="btn btn-red" data-dismiss="modal">Get Started</button></div>
