--- a/STSEval/app/templates/app/help/djudge.html
+++ b/STSEval/app/templates/app/help/djudge.html
@@ -1,20 +1,26 @@
 <div id="divHelpManageTeam" align="center">
-<div id="divHelpPage1"> 
-<p align="left">When the gymnast is present, start the video recording with <b>Start Judging</b>.</p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/start-judging.png"><ul align="left"><li>You will script the exercise on paper.</li></ul>
-<p align="left">When the gymnast finishes his routine, stop recording with <b>Exercise Done</b>.</p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/exercise-done.png"><ul align="left"><li>This will give the E-Judges 20 seconds to review their dots.</li><li>After 20 seconds, all E-Jury dots are auto-submitted.</li></ul>
-<p align="left">Once the deductions appear, do a quick review of the E-Jury dots.</p>
-<p align="left">For NCAA four judge panels, send the E-Judges to the other D-Judge with <b>Release E-Jury</b>.</p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/release-e-jury.png"><br><br>
+<div id="divHelpPage1">
+<p align="left">When the gymnast is present, <b>Start Judging</b>.</p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/start-judging.png"><br><br><ul align="left"><li>This starts recording.</li><li>Unlocks E-Jury controllers.</li><li>You will script the exercise on paper.</li></ul>
+<p align="left">When the gymnast finishes, stop recording with <b>Exercise Done</b>.</p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/exercise-done.png"><br><br><ul align="left"><li>E-Judges have 20 seconds to review their dots.</li><li>After 20 seconds, all E-Jury dots are auto-submitted.</li><li>As D-Judge, you can then edit the dots.</li></ul>
+<p align="left">Once the deductions appear, do a quick review of the E-Jury dots.</p><ul align="left"><li>To change a deduction, click on the dot or blank area you wish to change. Select the desired change.</li><li>Changes are outlined in white.</li></ul>
+<p align="left"><i>Note: for NCAA 4-judge panels, send the E-Judges to the other D-Judge with <b>Release E-Jury</b>.</i></p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/release-e-jury.png"><br><br>
 <button href="#" type="button" onclick="return help_nav('divHelpPage2','divHelpPage1');" class="btn btn-main">Continue</button>
-<p style='font-size:.8em;'>1/2</p>
+<p style='font-size:.8em;'>1 of 3</p>
 </div>
 <div id="divHelpPage2" style="display:none">
-<p align="left">Enter the following:</p>
-<ul align="left"><li>Number of counting elements</li><ul><li>10 is the default for Seniors</li><li>8 is the default for Juniors</li></ul>
-<li>Difficulty Value</li><li>Group Value (2.0 is the default)</li><li>Connections and/or Bonus (if applicable)</li><li>Neutral Deductions (Line, Time, etc.)</li></ul>
-<p align="left">Finalize your work with <b>Set D-Score</b></p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/set-d-score.png">
-<p align="left">Send the panel's work to the <b>Scoreboard</b> with <b>Post Score</b></p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/post-score.png">
-<ul align="left"><li>This signals the coach display to cue the next gymnast to raise his hand to start the next exercise.</li></ul>
+<p align="left">Enter:</p>
+<ul align="left"><li>Number of counting elements if short</li><ul><li>default for Seniors - 10</li><li>default for Juniors - 8</li></ul>
+<li>Difficulty</li><li>Group Value (default - 2.0)</li><li>Connections and/or Bonus (if applicable)</li><li>Neutral Deductions (Line, Time, etc.)</li></ul>
+<p align="left">Finalize with <b>Set D-Score</b></p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/set-d-score.png"><br><br>
+<p align="left">Send the panel's work to the <b>Scoreboard</b> with <b>Post Score</b></p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/post-score.png"><br><br>
+<ul align="left"><li>Ready for next gymnast.</li></ul>
+<button href="#" type="button" onclick="return help_nav('divHelpPage3','divHelpPage2');" class="btn btn-main">Continue</button>
+<p style='font-size:.8em;'>2 of 3</p>
+</div>
+<div id="divHelpPage3" style="display:none">
+<p align="left"><b>Delete Routine</b> if you accidentally start an exercise or need to start over.</p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/delete-routine.png"><br><br>
+<p align="left"><i>Note: deleted routines cannot be recovered.</i></p>
 <button href="#" type="button" data-dismiss="modal" class="btn btn-red">Get Started</button>
-<p style='font-size:.8em;'>2/2</p>
+<p style='font-size:.8em;'>3 of 3</p>
 </div>
 </div>
