--- a/STSEval/management/templates/management/email_notice.html
+++ b/STSEval/management/templates/management/email_notice.html
@@ -6,7 +6,7 @@
 <p>You have been assigned {{assigned}} the following competition:</p>
 
 <table width='100%' style='border-style:solid;border-width:1px;' cellpadding='15px'><tr><td><b>Competition:</b> {{session.competition.name}} {{session.name}}<br>
-    <b>Competition Date:</b> {{session.competition.date|date:'l, F d, Y'}}<br><b>Competition Time:</b> {{session.time|date:'g:i A'}} (PST)<br><b>Assignment:</b> {{assigned_full}} </td></tr></table>
+    <b>Competition Date:</b> {{session.competition.date|date:'l, F d, Y'}}<br><b>Competition Time:</b> {{session.time|date:'g:i A'}} (EST)<br><b>Assignment:</b> {{assigned_full}} </td></tr></table>
 
 
 <p>To sign in to the competition, go to <a href='https://stslivegym.com{{url_extra}}' target='_blank'>STS Live Gym</a>. Your login information for this assignment is as follows:</p>
