--- a/STSEval/management/templates/management/session_form.html
+++ b/STSEval/management/templates/management/session_form.html
@@ -8,8 +8,8 @@
                 {{form.name.errors}}
             </div>
             <div class="col-3">
-                SESSION TIME<br/>
-                {{ form.time }}<br/>
+                SESSION TIME <span style="font-size:.6rem">(EST)</span><br/>
+                {{ form.time }} <br/>
                 {{form.time.errors}}
             </div>
             <div class="col-3">
