--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -150,12 +150,15 @@
     <script src="{% static 'app/scripts/respond.js' %}"></script>
     <script src="{% static 'app/scripts/help.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
     <script type="text/javascript" src="https://webrtchacks.github.io/adapter/adapter-latest.js"></script>
     <script>
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseUID;
   var firebaseConfig = {
     apiKey: "AIzaSyAvZ12tOzfv4UM8-_BpT4gbmD1OKVoqRl0",
     authDomain: "stseval-36cfb.firebaseapp.com",
@@ -166,8 +169,10 @@
     appId: "1:1019428400127:web:5332dcf5da4f0ef0c195ca",
     measurementId: "G-0WC6M5637N"
   };
+
   // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
+
 function EventChanged(evIn)
 {
     window.location = window.location.href.replace("e={{event|upper}}", "e=" + evIn);
